# full_duplex

./: CMakeLists.txt  Makefile  cppdock.ini  cppdock.json
docker/: Dockerfile-develop
include/: full_duplex.hpp
include/full_duplex/: async_queue.hpp  do.hpp  endpoint.hpp  endpoint_open.hpp  error.hpp  event.hpp  future.hpp  map.hpp  promise.hpp  run_async.hpp  scratch.hpp  send_message.hpp
include/full_duplex/detail/: endpoint_inst.hpp  final_promise.hpp  hold.hpp  holder.hpp  promise_impl.hpp  promise_join.hpp
include/full_duplex/fwd/: async_queue.hpp  do.hpp  endpoint.hpp  endpoint_open.hpp  error.hpp  event.hpp  future.hpp  map.hpp  promise.hpp  run_async.hpp  send_message.hpp
test/: CMakeLists.txt
test/async_queue/: std_queue.cpp
test/endpoint/: compose.cpp  send_message.cpp
test/future/: future.cpp
test/promise/: chain.cpp  do.cpp  error.cpp  extra.cpp  map.cpp  promise_any.cpp  run_async.cpp  transform.cpp  transform.hpp
